--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = 'Shin'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '14'
+targetCompatibility = '14'
 
 repositories {
 	mavenCentral()
